# project_manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SESSION_RESUME_2026-04-16.md  SESSION_RESUME_2026-04-16_v2.md  apm.lock.yaml  apm.yml  assumptions.md  decisions.log.md  decisions_pending.md  descripcion_funcional.md  dev.sh  docker-compose.dev.yml  megadocumento_mvp_prd_admin_backlog.md  my_doc.md  progress.md  tech_info.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  worker.py
backend/app/application/commands/: create_work_item_command.py  delete_work_item_command.py  force_ready_command.py  reassign_owner_command.py  transition_state_command.py  update_work_item_command.py
backend/app/application/events/: __init__.py  chat_primer_subscriber.py  event_bus.py  events.py  notification_subscriber.py  review_events.py  timeline_subscriber.py  validation_template_subscriber.py
backend/app/application/services/: admin_dashboard_service.py  admin_support_service.py  assignment_service.py  audit_service.py  auth_service.py  clarification_service.py  comment_service.py  completeness_service.py  completion_rollup_service.py  context_preset_service.py  conversation_service.py  dashboard_service.py  dependency_service.py  diff_service.py  draft_service.py  export_service.py  inbox_service.py  integration_service.py  jira_config_service.py  kanban_service.py  mcp_token_issue_service.py  mcp_token_revoke_service.py  mcp_token_rotate_service.py  mcp_token_verify_service.py  member_service.py  membership_resolver_service.py  next_step_service.py  notification_service.py  person_dashboard_service.py  pipeline_service.py  project_service.py  puppet_ingest_service.py  puppet_sync_service.py  quick_action_dispatcher.py  ready_gate_service.py  review_request_service.py  review_response_service.py  review_service.py  saved_search_service.py  search_service.py  (+14 more)
backend/app/config/: celery_app.py  logging.py  settings.py
backend/app/domain/: constants.py  exceptions.py  pagination.py  state_machine.py
backend/app/domain/errors/: codes.py
backend/app/domain/gap_detection/: gap_detector.py
backend/app/domain/models/: assistant_suggestion.py  attachment.py  audit_event.py  comment.py  context_preset.py  conversation_thread.py  gap_finding.py  integration.py  invitation.py  jira_config.py  lock_unlock_request.py  mcp_token.py  project.py  puppet_ingest_request.py  review.py  saved_search.py  section.py  section_catalog.py  section_lock.py  section_type.py  section_version.py  session.py  tag.py  task_node.py  team.py  template.py  timeline_event.py  user.py  validation_rule.py  validation_rule_template.py  validator.py  work_item.py  work_item_draft.py  work_item_version.py  workspace.py  workspace_membership.py
backend/app/domain/ports/: cache.py  dundun.py  jira.py  notifier.py  puppet.py
backend/app/domain/quality/: cycle_detection.py  dimension_checkers.py  (+3 more)
backend/app/infrastructure/: pagination.py
backend/app/presentation/: capabilities.py  dependencies.py  rate_limit.py
backend/apps/mcp_server/: server.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users.py  0002_create_sessions.py  0003_create_workspaces.py  0004_create_workspace_memberships.py  0005_create_audit_events.py  0006_create_oauth_states.py  0007_hardening.py  0008_session_indexes_and_audit_reads.py  0009_create_work_items.py  0010_state_transitions_system_actor.py  0011_add_draft_data_template_id_to_work_items.py  0012_create_work_item_drafts.py  0013_create_templates.py  0014_create_conversation_threads.py  0015_create_assistant_suggestions.py  0016_create_gap_findings.py  0017_create_work_item_sections.py  0018_create_work_item_section_versions.py  0019_create_work_item_validators.py  0020_create_work_item_versions.py  0021_add_section_id_to_assistant_suggestions.py  0022_create_task_nodes.py  0023_create_review_and_validation.py  0024_ep07_versions_comments_timeline.py  0025_create_teams_notifications.py  0026_create_saved_searches.py  0027_create_projects_routing.py  0028_create_integration_exports.py  0029_ep13_puppet_outbox.py  0030_ep14_ep15_ep16_ep17.py  0031_extend_work_item_types.py  0032_team_memberships_idx.py  0033_ep03_rls.py  0034_ep13_puppet_ingest_requests.py  0060_ep06_review_schema_fixes.py  0080_add_applied_suggestion_status.py  0100_ep09_saved_searches_is_shared.py  0110_ep10_routing_rules_active.py  0111_ep10_validation_rule_templates.py  0112_rls_backfill.py  (+11 more)
backend/scripts/: dev_token.py  seed_dev.py  seed_notifications.py  seed_sample_data.py
backend/tests/: conftest.py
backend/tests/fakes/: fake_dundun_client.py  fake_google_oauth.py  fake_mcp_token_repositories.py  fake_puppet_client.py  fake_repositories.py  fake_review_repositories.py
backend/tests/integration/: test_admin_mcp_tokens_controller.py  test_admin_workspace_guard_sf7.py  test_audit_credential_crud.py  test_audit_integration.py  test_audit_integration_auth.py  test_audit_jira_export.py  test_audit_list_pagination.py  test_audit_log_repository.py  test_audit_status_transition.py  test_auth_controller.py  test_clarification_controller.py  test_completeness_breakdown_ep04_ep05.py  test_conversation_controller.py  test_conversation_ws.py  test_csrf_client_fixture.py  test_dundun_callback_controller.py  test_dundun_fake.py  test_dundun_signals_contract.py  test_dundun_version_target_mf3.py  test_ep04_controllers.py  test_ep06_controllers.py  test_ep07_controllers.py  test_ep08_inbox_controller.py  test_ep08_notification_controller.py  test_ep08_team_controller.py  test_ep09_dashboard.py  test_ep09_list_filters.py  test_ep09_saved_searches.py  test_ep09_search.py  test_ep09_security_fixes.py  test_ep10_admin_members.py  test_ep10_integration_delete.py  test_ep10_routing_rules.py  test_ep12_middleware_chain.py  test_expire_drafts_job.py  test_export_controller.py  test_force_release_lock.py  test_health.py  test_inbox_pagination.py  test_internal_jobs_controller.py  (+32 more)
backend/tests/unit/: test_settings_ep12.py
(+1426 files in other folders)
