[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmp-backend"
version = "0.1.0"
description = "Work Maturation Platform — backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "orjson>=3.10",
    "websockets>=12.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "testcontainers[postgres]>=4.4",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring running containers",
    "unit: marks tests as pure unit tests",
]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["migrations/"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]
# B008: FastAPI uses Depends() in function defaults by design — this is the documented pattern.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py313"]
