[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmp-backend"
version = "0.1.0"
description = "Work Maturation Platform — backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "orjson>=3.10",
    "websockets>=12.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "testcontainers[postgres]>=4.4",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring running containers",
    "unit: marks tests as pure unit tests",
]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["migrations/"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]
# B008: FastAPI uses Depends() in function defaults by design — this is the documented pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures often declare parameters by name to trigger setup/teardown
# even when the test body doesn't reference the fixture directly. ARG001/002/005
# flag these as "unused", which is a false positive in test code.
"tests/**" = ["ARG001", "ARG002", "ARG005", "B017", "B018", "E741", "SIM102", "SIM105", "SIM117", "E501"]
# Alembic migrations regularly declare `down_revision = None` etc. at module
# scope, plus have autogenerated bodies that trip several style rules.
"migrations/**" = ["E501", "ARG001", "ARG002"]
# SQLAlchemy/asyncpg/tracing callbacks have fixed-arity signatures the library
# invokes positionally — the unused names are part of the contract, not dead
# code.
"app/infrastructure/db/query_counter.py" = ["ARG001"]
"app/infrastructure/sse/pg_notification_bus.py" = ["ARG001"]
"app/infrastructure/observability/tracing.py" = ["ARG001"]
# Repository impls implement a domain interface that passes workspace_id; the
# impl enforces workspace isolation via RLS at the session level, so the arg
# is intentionally unused at the method body level.
"app/infrastructure/persistence/section_repository_impl.py" = ["ARG002"]
"app/infrastructure/persistence/work_item_repository_impl.py" = ["ARG002"]
# Service interface contracts (kanban cursors pending v2, completion rollup
# node kept on the signature for ABC compatibility, timeline_service
# workspace_id deferred to RLS-aware repo).
"app/application/services/completion_rollup_service.py" = ["ARG002"]
"app/application/services/kanban_service.py" = ["ARG002"]
"app/application/services/timeline_service.py" = ["ARG002"]
# Dimension checker stubs accept the full context so they can be pluggable,
# even when a given checker doesn't look at sections.
"app/domain/quality/dimension_checkers.py" = ["ARG001"]
# FastAPI controllers declare `request`, `session`, `current_user`, path params
# by Depends-driven contract even when the handler body doesn't touch them.
"app/presentation/controllers/auth.py" = ["ARG001"]
"app/presentation/controllers/dundun_callback_controller.py" = ["ARG001"]
"app/presentation/controllers/internal_jobs_controller.py" = ["ARG001"]
"app/presentation/controllers/puppet_controller.py" = ["ARG001"]
"app/presentation/controllers/task_controller.py" = ["ARG001"]
"app/presentation/controllers/work_item_controller.py" = ["ARG001"]
"app/presentation/dependencies.py" = ["ARG001"]
# Celery/background-task signature contracts.
"app/infrastructure/tasks/notification_tasks.py" = ["ARG001"]

[tool.black]
line-length = 110
target-version = ["py313"]
